feat(generation): Faz D's wording outlives the generation that made it
V11 adds generations.rewritten_content, keyed by atom id, because Faz G
re-runs the pipeline and every atom that survives an edit has to keep the
sentence it already has.

content_snapshot looks like it already holds this and does not. Bolum
22.2 built RenderRequest to carry no ids, no scores and no locks -- only
what prints -- so the text in that column cannot be handed back to the
atom it belongs to. Without this the person switches off one bullet and
gets the whole CV back in its pre-Faz-D voice, or we pay for every other
bullet's sentences a second time to avoid it.

GeneratedDocument carries the map instead of its size; rewrittenAtoms()
is derived, so the trace reads the same as before.

Null in the column means a row written before V11 and nothing else. Empty
means no atom on this page carries a Faz D wording -- general mode, an
unreachable provider, every rewrite refused -- and to the run that reads
it back those are one answer, so the schema does not pretend to tell them
apart.

Two things the round trip taught, both asserted rather than assumed:
jsonb does not keep an object's key order (it sorts by length and bytes),
so the column comes back sorted by atom id however it was written --
which nothing minds, this being a lookup. The ordered copy that replaced
Map.copyOf is therefore about what walks the map in memory, not about the
column.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01FV6QuW38ABg1EthbtQFfRx